2008-01-13  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarblePlacemarkModel.{h,cpp}:
    * src/lib/PlaceMarkLayout.{h,cpp}:

    - Patch by Claudiu Covaci to get satellite displayed on the far-off hemisphere.

    - Performance fix to keep speed when zooming in from slowing down.
      This addresses a regression due to the Model-View-refactorization which 
      made the speed going down by 50%. 

    * src/lib/MarbleWidget.{h,cpp}:
    * src/lib/MarbleModel.{h,cpp}:

    - We don't need to reinvent setAutoFillBackground ...
    - We don't want to draw the atmosphere on close-up zoom
    - Introduction of direction detection
    - clean-up

    * src/lib/GridMap.cpp: Small performance fix
    * src/MarbleTest.cpp: Fixing default coordinates

2008-01-07  Torsten Rahn  <rahn@kde.org>

    * src/lib/ViewParams.h:
    * src/lib/MarbleWidget.{h, cpp}:
    * src/lib/MarbleModel.cpp:

    - Fixed blue tint of space and added setBackgroundTransparency method as part of the fix.
    - Don't draw the whole screen if the globe doesn't cover it completely.
    - Fixed Atmosphere not getting drawn when changing projection.

    * src/lib/MarbleControlBox.cpp:
    * src/lib/MarbleControlBox.ui:

    - Getting rid of scrollbars under normal conditions.

    * data/vectorsource/lakes.svg:
    * data/mwdbii/PLAKE.PNT:

    - Fixing lake placement bug as described in easyLINUX (TM) magazine.

2008-01-06  Torsten Rahn  <rahn@kde.org>

    - Bumping up version number.

    - Fixed up-down direction of toolbar arrow buttons and screen arrow buttons.

    - Fixed: Free tileloader cache if we switch to plain map 

    - Fixed: In flat projection if you move the map way up or down in total view then the compass rose will show an "S" at the top. 


2008-01-03  Torsten Rahn  <rahn@kde.org>

    * ChangeLog:
    * src/lib/gps/Track.cpp:
    * src/lib/gps/Track.h:
    * src/lib/gps/GpxSax.cpp:
    * src/lib/gps/GpsTracking.cpp:
    * src/lib/gps/WaypointContainer.cpp: